--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
       </ul>
     </section>
     <section id="team">
-      <h2 class="team">Our team</h2>
+      <h2 hidden="team">Our team</h2>
       <ul>
         <li>
           <img
-            src="./images/img 1.jpg"
+            src="./images/img-1.jpg"
             alt="Product Designer"
             width="264"
             height="260"
@@ -79,7 +79,7 @@
         </li>
         <li>
           <img
-            src="./images/img 2.jpg"
+            src="./images/img-2.jpg"
             alt="Frontend Developer"
             width="264"
             height="260"
@@ -89,7 +89,7 @@
         </li>
         <li>
           <img
-            src="./images/img 3.jpg"
+            src="./images/img-3.jpg"
             alt="Marketing"
             width="264"
             height="260"
@@ -99,7 +99,7 @@
         </li>
         <li>
           <img
-            src="./images/img 4.jpg"
+            src="./images/img-4.jpg"
             alt="UI Designer"
             width="264"
             height="260"
@@ -111,7 +111,7 @@
     </section>
   </main>
   <footer>
-    <div class="logo">Web Studio</div>
+    <a href="./index.html">WebStudio</a>
     <p>
       Increase the flow of customers and sales for your business with digital
       marketing & growth solutions.
