--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </ul>
     </section>
     <section id="team">
-      <h2>Our team</h2>
+      <h2>Our Team</h2>
       <ul>
         <li>
           <img
